tried to improve code climate??

--- a/graphs/html_graphs/cut_point_graph.html
+++ b/graphs/html_graphs/cut_point_graph.html
@@ -28,15 +28,15 @@ var links = [{"source": 1, "target": 18, "weight": 1}, {"source": 2, "target": 3
 
 var nodes = [{"id": "NLA Alvarez", "value": 1}, {"id": "J Matovu", "value": 1}, {"id": "B Goldstein", "value": 1}, {"id": "ML Best", "value": 1}, {"id": "J Hurtienne", "value": 1}, {"id": "PW Jordan", "value": 1}, {"id": "A Seidakmatova", "value": 1}, {"id": "LM Haverhals", "value": 1}, {"id": "P Cole", "value": 1}, {"id": "SL Martins", "value": 1}, {"id": "R Rege", "value": 2}, {"id": "P Reimers", "value": 1}, {"id": "T Clemmensen", "value": 1}, {"id": "V Wulf", "value": 1}, {"id": "E Green", "value": 1}, {"id": "R Flournoy", "value": 1}, {"id": "A Navabi", "value": 1}, {"id": "W Gerard", "value": 3}, {"id": "R Hinman", "value": 1}, {"id": "E Blank", "value": 1}, {"id": "ML Gilliam", "value": 1}, {"id": "M Glaser", "value": 2}, {"id": "A Susi", "value": 1}, {"id": "WARWM Isa", "value": 1}, {"id": "CE Hsu", "value": 2}, {"id": "P Sirisalee", "value": 1}, {"id": "D Israelski", "value": 1}, {"id": "J Kamano", "value": 2}, {"id": "A Shoa'la", "value": 1}, {"id": "KL Kumar", "value": 1}, {"id": "S Hailemariam", "value": 1}, {"id": "FJM Meiland", "value": 1}, {"id": "APD Jansen", "value": 1}, {"id": "B Ariyatum", "value": 1}, {"id": "J Goldsmith", "value": 1}, {"id": "L Barnard", "value": 1}, {"id": "C Johnson", "value": 2}, {"id": "S Nagarkar", "value": 1}, {"id": "A Villafiorita", "value": 1}, {"id": "O Salikhbaeva", "value": 1}, {"id": "J Spencer", "value": 1}, {"id": "KK Mathias", "value": 1}, {"id": "C Jonker", "value": 1}, {"id": "D Loffler", "value": 1}, {"id": "G Tortora", "value": 1}, {"id": "Z Fu", "value": 1}, {"id": "PRS Rao", "value": 1}, {"id": "S Fox", "value": 1}, {"id": "P Altankhuyag", "value": 1}, {"id": "F Kamoun", "value": 1}, {"id": "L Misoi", "value": 1}, {"id": "J Keh", "value": 1}, {"id": "SE Ross", "value": 1}, {"id": "B DeRenzi", "value": 1}, {"id": "M Bhattacharya", "value": 1}, {"id": "S Ahmed", "value": 1}, {"id": "CF Leitao", "value": 1}, {"id": "X Hua", "value": 1}, {"id": "G Borriello", "value": 2}, {"id": "F Chen", "value": 1}, {"id": "J Wesson", "value": 1}, {"id": "J Machiavelli", "value": 2}, {"id": "Z Franco", "value": 1}, {"id": "C Jacks", "value": 1}, {"id": "E Seman", "value": 1}, {"id": "T Yamanaka", "value": 1}, {"id": "M Kam", "value": 1}, {"id": "P Biondich", "value": 1}, {"id": "A Kavanaugh", "value": 1}, {"id": "R Tranfaglia", "value": 1}, {"id": "WD Tucker", "value": 2}, {"id": "A Lindgren", "value": 1}, {"id": "M Yunus", "value": 1}, {"id": "V Fuster", "value": 2}, {"id": "P Prasad", "value": 1}, {"id": "M Were", "value": 1}, {"id": "C Pattichis", "value": 1}, {"id": "A Coutsoudis", "value": 1}, {"id": "D Vlachos", "value": 1}, {"id": "T Sibieude", "value": 1}, {"id": "S Opel", "value": 1}, {"id": "T Baker", "value": 1}, {"id": "K Phyrum", "value": 1}, {"id": "H Pettersson", "value": 1}, {"id": "D Ascheim", "value": 1}, {"id": "KA Siek", "value": 1}, {"id": "N Takeyama", "value": 1}, {"id": "A Dekhtyar", "value": 1}, {"id": "E Rose", "value": 3}, {"id": "RM Droes", "value": 1}, {"id": "WM Sheta", "value": 1}, {"id": "S Iyengar", "value": 2}, {"id": "KG Brand", "value": 1}, {"id": "P Di Giovanni", "value": 1}, {"id": "J Hey", "value": 1}, {"id": "Y Jeong", "value": 1}, {"id": "AW Yeo", "value": 1}, {"id": "HPJ van Hout", "value": 1}, {"id": "D Prommin", "value": 1}, {"id": "A Tibuzzi", "value": 1}, {"id": "C Putnam", "value": 3}, {"id": "A Bayor", "value": 1}, {"id": "M Romano", "value": 1}, {"id": "L Schlenke", "value": 1}, {"id": "EJ Velazquez", "value": 1}, {"id": "G Konnis", "value": 1}, {"id": "M Elteir", "value": 1}, {"id": "JS Sandhu", "value": 2}, {"id": "R Nathan", "value": 2}, {"id": "K Perakis", "value": 1}, {"id": "S Mehad", "value": 1}, {"id": "T Nyholm", "value": 1}, {"id": "K Asano", "value": 1}, {"id": "A Hope", "value": 4}, {"id": "M Kurosu", "value": 1}, {"id": "I Seiborger", "value": 1}, {"id": "S Shahid", "value": 1}, {"id": "CA Darr", "value": 1}, {"id": "Z Ying", "value": 1}, {"id": "NLM Noor", "value": 1}, {"id": "B Aryana", "value": 2}, {"id": "C Boks", "value": 2}, {"id": "J Huang", "value": 1}, {"id": "S Lazem", "value": 1}, {"id": "M Ntinda", "value": 1}, {"id": "E Bartlett", "value": 1}, {"id": "A Ahmad", "value": 1}, {"id": "A Yeung", "value": 1}, {"id": "M Anda", "value": 1}, {"id": "U Bracale", "value": 1}, {"id": "M de Araujo Novaes", "value": 2}, {"id": "A Keny", "value": 1}, {"id": "HG van der Roest", "value": 1}, {"id": "M Mahmud", "value": 2}, {"id": "BP Shrimali", "value": 1}, {"id": "C Newman", "value": 1}, {"id": "A Boden", "value": 1}, {"id": "L Pecchia", "value": 1}, {"id": "K Israel-Ballard", "value": 1}, {"id": "M Sebillo", "value": 1}, {"id": "JW Rosenboom", "value": 1}, {"id": "D Thakur", "value": 1}, {"id": "M Al Blushi", "value": 1}, {"id": "JL Holl", "value": 1}, {"id": "E Stolterman", "value": 1}, {"id": "M Ishimitsu", "value": 1}, {"id": "T Gorman", "value": 1}, {"id": "JH Matthews", "value": 1}, {"id": "R Sulaiman", "value": 1}, {"id": "MB Parker", "value": 1}, {"id": "E Krahmer", "value": 1}, {"id": "E Derksen", "value": 1}, {"id": "R Walton", "value": 4}, {"id": "CS De Souza", "value": 1}, {"id": "W Brunette", "value": 4}, {"id": "R Vedanthan", "value": 2}, {"id": "H Zhang", "value": 1}, {"id": "C Le Dantec", "value": 1}, {"id": "N Poosanthanasarn", "value": 1}, {"id": "R Fabricant", "value": 1}, {"id": "M Hicks", "value": 2}, {"id": "A Androulidakis", "value": 1}, {"id": "K Lindner", "value": 1}, {"id": "J Zhang", "value": 2}, {"id": "R Steinbeck", "value": 1}, {"id": "S Bucolo", "value": 1}, {"id": "K Kang", "value": 1}, {"id": "M Kawooya", "value": 2}, {"id": "C Driesbach", "value": 1}, {"id": "J Liu", "value": 1}, {"id": "A Siegel", "value": 1}, {"id": "HB Zaman", "value": 1}, {"id": "M Roberts", "value": 1}, {"id": "MB Motlhabi", "value": 1}, {"id": "K Yamazaki", "value": 1}, {"id": "C Pulkate", "value": 1}, {"id": "J Lee", "value": 1}, {"id": "A Freudenthal", "value": 1}, {"id": "SG Mougiakakou", "value": 1}, {"id": "CR Horowitz", "value": 1}, {"id": "C Hutchinson", "value": 1}, {"id": "CA Mattson", "value": 1}, {"id": "DK Rosner", "value": 1}, {"id": "I Hussein", "value": 2}, {"id": "H Thinyane", "value": 1}, {"id": "S Kim", "value": 1}, {"id": "JM Ruscin", "value": 1}, {"id": "MG Sandy", "value": 1}, {"id": "T Mullaney", "value": 1}, {"id": "M Belachew", "value": 1}, {"id": "E Johnson", "value": 2}, {"id": "M Ames", "value": 1}, {"id": "AM Agogino", "value": 1}, {"id": "S Sriboorapa", "value": 1}, {"id": "R Chhatpar", "value": 1}, {"id": "P Owiti", "value": 1}, {"id": "R Chaudhri", "value": 1}, {"id": "A Zewge", "value": 1}, {"id": "SA Linnebur", "value": 1}, {"id": "J Pinfold", "value": 1}, {"id": "D Lilley", "value": 1}, {"id": "C Malin", "value": 1}, {"id": "X Zhang", "value": 1}, {"id": "G Ho", "value": 1}, {"id": "AK Sin", "value": 1}, {"id": "DA Nelson", "value": 1}, {"id": "C Lohachit", "value": 1}, {"id": "S Kimaiyo", "value": 2}, {"id": "R Anderson", "value": 3}, {"id": "H Knoche", "value": 1}, {"id": "R Vogler", "value": 2}, {"id": "K Saville", "value": 1}, {"id": "N Perin", "value": 1}, {"id": "B Longo", "value": 1}, {"id": "D Tatar", "value": 1}, {"id": "CA Lee", "value": 1}, {"id": "HC Comijs", "value": 1}, {"id": "L Diero", "value": 1}, {"id": "SQ Mistretta", "value": 1}, {"id": "E Kyriacou", "value": 1}, {"id": "A Campbell", "value": 1}, {"id": "A Puckett", "value": 1}, {"id": "C Isenhour", "value": 1}, {"id": "PA Biedrzycki", "value": 1}, {"id": "E Lesueur", "value": 1}, {"id": "LC De Castro Salgado", "value": 1}, {"id": "J Yaaqoubi", "value": 2}, {"id": "C Catalani", "value": 1}, {"id": "N Tuikong", "value": 1}, {"id": "O Sohaib", "value": 1}, {"id": "A Hashizume", "value": 1}, {"id": "A Joshi", "value": 2}, {"id": "K Weldemariam", "value": 1}, {"id": "D Amarsaikhan", "value": 1}, {"id": "J Luginbuhl", "value": 1}, {"id": "D Koutsouris", "value": 1}, {"id": "K Pecknold", "value": 1}, {"id": "H Papadopoulos", "value": 1}, {"id": "DW Randall", "value": 1}, {"id": "N Werghi", "value": 1}, {"id": "B Kolko", "value": 12}, {"id": "AE Wood", "value": 1}, {"id": "R Holland", "value": 1}, {"id": "G Ruddy", "value": 1}, {"id": "W Fungladda", "value": 1}, {"id": "G Vitiello", "value": 1}, {"id": "P Chininthorn", "value": 1}];
 
-var width = 1800
-height = 1800;
+var width = 1700
+height = 1700;
 
 var force = d3.layout.force()
   .nodes(d3.values(nodes))
   .links(links)
   .size([width, height])
-  .linkDistance(120)
-  .charge(-210)
+  .linkDistance(90)
+  .charge(-160)
   .on("tick", tick)
   .start();
 
@@ -56,16 +56,17 @@ var node = svg.selectAll(".node")
   .attr("class", "node")
   .on("mouseover", mouseover)
   .on("mouseout", mouseout)
+  .on("click", click)
   .call(force.drag);
 
 node.append("circle")
   .style("fill", "#C71585")
-  .attr("r", function(d) { return d.value*2 + 5; });
+  .attr("r", function(d) { return 5; });
 
 node.append("text")
-  .attr("x", 14)
+  .attr("x", 10)
   .attr("dy", ".35em")
-  .style("opacity", 1)
+  .style("opacity", 0)
   .style("fill", "#333")
   .text(function(d) {
     return d.id;
@@ -90,22 +91,32 @@ function tick() {
   });
 }
 
+var selected = false;
+
 function mouseover() {
   d3.select(this).select("text").transition()
-    .duration(400)
     .attr("x", 22)
-    .style("font", "16px arial");
+    .style("opacity", 1)
+    .style("font", "12px arial");
 }
 
 function mouseout() {
-  d3.select(this).select("text").transition()
-    .style("font", "10px arial")
+  if (selected == false) {
+    d3.select(this).select("text").transition()
+      .style("opacity", 0);
+  }
+  if (selected == true) {
+    selected = false;
+  }
 }
+
 // action to take on mouse click
 function click() {
   d3.select(this).select("text").transition()
     .attr("x", 22)
+    .style("opacity", 1)
     .style("font", "16px arial");
+  selected = true;
 }
 }
 
